--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -79,6 +79,32 @@
         </div>
       </div>
 
+      <!-- Notifications Card -->
+      <div class="dashboard-card notifications-card animate-float-up animate-stagger-4">
+        <div class="card-header">
+           <h3><i class="fas fa-bell"></i> التنبيهات</h3>
+        </div>
+        <div class="card-content">
+           <div class="notification-setup" id="telegramSetup">
+               <div class="setup-icon">
+                   <i class="fab fa-telegram"></i>
+               </div>
+               <div class="setup-info">
+                   <h4>ربط حساب تيليجرام</h4>
+                   <p>احصل على تنبيهات فورية عند وصول تقييم جديد.</p>
+                   <div id="telegramStatus" class="status-indicator hidden">
+                       <i class="fas fa-check-circle"></i> متصل
+                   </div>
+               </div>
+               <div class="setup-action">
+                   <a href="#" id="connectTelegramBtn" class="btn btn-telegram" target="_blank">
+                       <i class="fab fa-telegram-plane"></i> تفعيل التنبيهات
+                   </a>
+               </div>
+           </div>
+        </div>
+      </div>
+
       <!-- Reviews Tabs Section -->
       <div class="dashboard-card reviews-card animate-float-up animate-stagger-4">
         <div class="card-header">
